<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGrey"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TeacherQuestion" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="442dp"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize" >

            <EditText
                android:id="@+id/ans4"
                android:layout_width="match_parent"
                android:layout_height="35dip"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/ans3"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/ques_txtans4"
                android:paddingLeft="@dimen/panding5"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/ans3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/ans2"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/ques_txtans3"
                android:paddingLeft="@dimen/panding5"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/ans2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/ans1"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/ques_txtans2"
                android:paddingLeft="@dimen/panding5"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/questime"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ans4"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/ques_txttime"
                android:inputType="number"
                android:maxLength="2"
                android:paddingLeft="@dimen/panding5" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/etxtquestion"
                android:layout_marginTop="14dp"
                android:text="@string/ques_txtans"
                android:textColor="@color/Black"
                android:textSize="@dimen/textsize18dip" />

            <EditText
                android:id="@+id/ans1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/ques_txtans1"
                android:paddingLeft="@dimen/panding5"
                tools:ignore="TextFields" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/questime"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/questime"
                android:text="@string/ques_txtminute"
                android:textSize="@dimen/textsize15dip" />

            <Button
                android:id="@+id/savequstion"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="30dp"
                android:background="@drawable/custom_btn_seagull"
                android:text="@string/ques_btnsave" />

            <Spinner
                android:id="@+id/quessubject"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_btn_seagull" />

            <EditText
                android:id="@+id/etxtquestion"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/quessubject"
                android:layout_marginTop="26dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/ques_txtques"
                android:paddingLeft="@dimen/panding5"
                tools:ignore="TextFields" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>