<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TeacherCheck" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="382dp"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize" >

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/textView1"
                android:layout_marginTop="17dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:text="@string/check_txtidnamecourse"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="49dp"
                android:text="@string/check_txtpasscode"
                android:textColor="@color/Black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/passcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="center"
                android:maxLength="4"
                android:textSize="22dp" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/passcode"
                android:layout_marginTop="35dp"
                android:background="@drawable/custom_btn_whiskey"
                android:text="@string/check_btnaccept"
                android:textColor="@color/Black" />

            <DigitalClock
                android:id="@+id/digitalClock1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/passcode"
                android:layout_below="@+id/submit"
                android:layout_marginTop="22dp"
                android:text="DigitalClock" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>