<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TeacherViewReport" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="442dp"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/view_txtidnamecoures"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize20" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignRight="@+id/textView1"
                android:text="10"
                android:textColor="@color/Black"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/etpasscode"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/textView2"
                android:layout_below="@+id/btncancelchpw"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="Student ID"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="10"
                android:singleLine="true"
                android:width="50dp" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:text="Project I"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize18dip"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="16dp"
                android:text="@string/view_count"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/addstudentid"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="14dp"
                android:background="@drawable/custom_btn_shakespeare"
                android:text="@string/cview_btnviewadd" />

            <GridView
                android:id="@+id/gridView1"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView4"
                android:layout_marginTop="14dp"
                android:numColumns="2" >
            </GridView>

            <Button
                android:id="@+id/btncancelchpw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/gridView1"
                android:layout_marginTop="17dp"
                android:background="@drawable/custom_btn_seagull"
                android:text="OK" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>